--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="title_activity_menu">MenuActivity</string>
     <string name="title_activity_connect">ConnectActivity</string>
     <string name="title_activity_new_task">NewTaskActivity</string>
+    <string name="title_activity_setting">SettingActivity</string>
 </resources>
