添加admin管理和修改界面

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="title_activity_new_task">NewTaskActivity</string>
     <string name="title_activity_setting">SettingActivity</string>
     <string name="title_activity_staff_modify">StaffModifyActivity</string>
+    <string name="title_activity_staff_manager">StaffManagerActivity</string>
+    <string name="title_activity_admin_modify">AdminModifyActivity</string>
 </resources>
