添加user界面，基本实现逻辑，修改user功能

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -13,4 +13,5 @@
     <string name="title_activity_staff_manager">StaffManagerActivity</string>
     <string name="title_activity_admin_modify">AdminModifyActivity</string>
     <string name="title_activity_passwd_modify">PasswdModifyActivity</string>
+    <string name="title_activity_user">UserActivity</string>
 </resources>
