--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -14,4 +14,5 @@
     <string name="title_activity_admin_modify">AdminModifyActivity</string>
     <string name="title_activity_passwd_modify">PasswdModifyActivity</string>
     <string name="title_activity_user">UserActivity</string>
+    <string name="title_activity_task_modify">TaskModifyActivity</string>
 </resources>
