实现Adjustactivity、Adjustfragment逻辑（Adjustfragment中图形状态显示保存未完成）

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -16,4 +16,5 @@
     <string name="title_activity_user">UserActivity</string>
     <string name="title_activity_task_modify">TaskModifyActivity</string>
     <string name="title_activity_task_manager">TaskManagerActivity</string>
+    <string name="title_activity_adjust">AdjustActivity</string>
 </resources>
