添加adjustresult界面，实现vcv流程

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -17,4 +17,5 @@
     <string name="title_activity_task_modify">TaskModifyActivity</string>
     <string name="title_activity_task_manager">TaskManagerActivity</string>
     <string name="title_activity_adjust">AdjustActivity</string>
+    <string name="title_activity_adjust_result">AdjustResultActivity</string>
 </resources>
