添加taskactivity，实现基本逻辑

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -18,4 +18,5 @@
     <string name="title_activity_task_manager">TaskManagerActivity</string>
     <string name="title_activity_adjust">AdjustActivity</string>
     <string name="title_activity_adjust_result">AdjustResultActivity</string>
+    <string name="title_activity_task">TaskActivity</string>
 </resources>
