--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -19,4 +19,8 @@
     <string name="title_activity_adjust">AdjustActivity</string>
     <string name="title_activity_adjust_result">AdjustResultActivity</string>
     <string name="title_activity_task">TaskActivity</string>
+    <string name="title_activity_test">TestActivity</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
