调整部分布局

--- a/yljapp/src/main/res/values/strings.xml
+++ b/yljapp/src/main/res/values/strings.xml
@@ -145,6 +145,10 @@
     <string name="task_finished_task">完成任务</string>
     <string name="task_task_list">任务列表</string>
     <string name="task_origin_setting">车头方向</string>
+    <string name="task_edit">修改信息</string>
+    <string name="task_finish">已完成</string>
+    <string name="task_not_finish">未完成</string>
+    <string name="task_no_adjust">未校验</string>
     <string name="task_"></string>
 
     <!-- Staff界面/Staff/Admin Modify/Staff Manager -->
@@ -196,5 +200,18 @@
     <string name="test_color_times">碾压次数：</string>
     <string name="test_status">状态：</string>
     <string name="test_"></string>
+
+    <!-- alert/dialog -->
+    <string name="alert_leave_adjust">是否离开相关性校验？</string>
+    <string name="alert_leave_adjust_result">是否放弃相关性校验结果？</string>
+    <string name="alert_delete_admin">是否删除该管理员账号？</string>
+    <string name="alert_delete_staff">是否删除该账号？</string>
+    <string name="alert_leave_test">是否离开测试？</string>
+    <string name="alert_delete_task">是否删除该任务？</string>
+    <string name="alert_task_list">任务列表</string>
+    <string name="alert_new_task">新建任务</string>
+    <string name="alert_no_finish">（未完成）</string>
+    <string name="alert_no_adjust">（未校验）</string>
+    <string name="alert_"></string>
 
 </resources>
